# teamwool-capstone

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
discussion/: admin.py  forms.py  models.py  views.py
discussion/migrations/: 0001_initial.py  0002_auto_20210412_2054.py  0002_auto_20210413_1453.py  0002_auto_20210416_1726.py  0002_auto_20210418_0403.py  0002_auto_20210418_0416.py  0002_auto_20210418_0625.py  0002_auto_20210418_1451.py  0002_auto_20210418_1526.py  0002_auto_20210420_0350.py  0002_auto_20210420_0451.py  0002_auto_20210420_0717.py  0002_auto_20210420_1335.py  0002_discussionmodel_user.py  0002_initial.py  0003_auto_20210413_1506.py  0003_discussionmodel_body.py  0004_auto_20210408_0153.py  0005_auto_20210412_1457.py  0006_auto_20210412_1542.py
favorites/: admin.py  models.py
favorites/migrations/: 0001_initial.py  0002_auto_20210407_1601.py  0002_auto_20210407_1724.py  0002_auto_20210408_0223.py  0002_auto_20210408_0302.py  0002_auto_20210412_1744.py  0002_auto_20210412_2054.py  0002_auto_20210413_1453.py  0002_auto_20210416_1726.py  0002_auto_20210418_0403.py  (+10 more)
genres/: urls.py  views.py
root/: staticfiles.json
templates/: 404.html  500.html  about.html  base.html  contact.html  edit_profile.html  forum-form.html  forum.html  genres.html  home.html  news.html  post-form.html  post.html  profile.html  user.html
userauth/: admin.py  forms.py  models.py  urls.py  views.py
woolnews_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
woolnews_config/: .envex  asgi.py  manage.py  settings.py  urls.py  wsgi.py
(+32 files in other folders)
