[tool.poetry]
name = "Team Wool Capstone App"
version = "0.1.0"
description = "News app with likes, and user submission feature"
authors = ["Joseph Dubon <josephdubon@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
flake8 = "^3.9.0"
Pillow = "^8.2.0"
whitenoise = "^5.2.0"
django-environ = "^0.4.5"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
